language/move-lang/tests/move_check/translated_ir_tests/move/commands/move_before_assign.exp
error: 

   ┌── tests/move_check/translated_ir_tests/move/commands/move_before_assign.move:4:9 ───
   │
 4 │     let y = move x;
   │         ^ Unused assignment or binding for local 'y'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_y')
   │

error: 

   ┌── tests/move_check/translated_ir_tests/move/commands/move_before_assign.move:4:13 ───
   │
 4 │     let y = move x;
   │             ^^^^^^ Invalid usage of local 'x'
   ·
 3 │     let x: u64;
   │         - The local does not have a value due to this position. The local must be assigned a value before being used
   │

